--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@prisma/client": "^5.11.0",
     "@vercel/postgres": "^0.7.2",
     "bcrypt": "^5.1.1",
